@@ -54,6 +54,7 @@ struct _pam_krb5_options {
 	int v4;
 	int v4_for_afs;
 	int v4_use_524;
+	int v4_use_as_req;
 	int warn;
 
 	krb5_deltat ticket_lifetime;
