@@ -1,3 +1,7 @@
+2006-02-06:
+	* src/options.c,src/options.h: break down and add an explicit option
+	for disabling v4-via-as-req attempts
+
 2006-01-26:
 	* src/minikafs.c: wrap a debug message in an if (debugging) clause.
 	* src/session.c: wrap a pair of debugging messages in an if (debugging)
